HTML Básico terminado.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,205 @@
 <body>
   <div class="wrapper">
     <header>
-
+      <div>
+        <p>A</p>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Espect&aacute;tulo</a></li>
+          <li><a href="#">Deportes</a></li>
+        </ul>
+      </div>
+      <div>
+        <h1>Blog Afrianska</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
     </header>
     <main>
-
+      <div>
+        <div>
+          <img src="./images/icon-search.svg" alt="Search Icon">
+          <input type="text" placeholder="Search Article">
+        </div>
+        <section>
+          <h3>POPULAR</h3>
+          <article>
+            <div>
+              <h2>Feugiat sodales at nullam tellus.</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi posuere nibh tempor fringilla porta pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div>
+                <div>
+                  <p><strong>Samantha Leuthex</strong></p>
+                  <p>May 5, 3 min read</p>
+                </div>
+                <div>
+                  <img src="./images/icon-save.svg" alt="Save Icon">
+                  <img src="./images/icon-share.svg" alt="Share Icon">
+                </div>
+              </div>
+            </div>
+            <figure><img src="https://picsum.photos/540/380" alt="Main Post Image"></figure>
+          </article>
+          <div>
+            <article>
+              <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+              <h3>Porta proin tellus sed pulvinar odio eu pulvinar.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div>
+                <div>
+                  <p>Samantha Leuthex</p>
+                  <p>May 5, 3 min read</p>
+                </div>
+                <div>
+                  <img src="./images/icon-save.svg" alt="Save Icon">
+                  <img src="./images/icon-share.svg" alt="Share Icon">
+                </div>
+              </div>
+            </article>
+            <article>
+              <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+              <h3>Non quam tortor, proin eu egestas scelerisque.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div>
+                <div>
+                  <p>Samatha Leuthex</p>
+                  <p>May 5, 3 min read</p>
+                </div>
+                <div>
+                  <img src="./images/icon-save.svg" alt="Save Icon">
+                  <img src="./images/icon-share.svg" alt="Share Icon">
+                </div>
+              </div>
+            </article>
+            <article>
+              <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+              <h3>Amet amet sed pharetra risus sit eget interdum.</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <div>
+                <div>
+                  <p>Samantha Leuthex</p>
+                  <p>May 5, 3 min read</p>
+                </div>
+                <div>
+                  <img src="./images/icon-save.svg" alt="Save Icon">
+                  <img src="./images/icon-share.svg" alt="Share Icon">
+                </div>
+              </div>
+            </article>
+          </div>
+          <p>SEE ALL POPULAR ARTICLE</p>
+        </section>
+        <section>
+          <h3>ALL ARTICLES</h3>
+          <article>
+            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+            <h4>Massa eu in laoreet enim augue vulputate nunc.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div>
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </article>
+          <article>
+            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+            <h4>Feugiat a euismod arcu feugiat posuere morbi.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div>
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </article>
+          <article>
+            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+            <h4>Sociis purus pellentesque faucibus vitae et felis.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div>
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </article>
+          <article>
+            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+            <h4>Cursus feugiat mi pellentesque mauris sed eu.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div>
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </article>
+          <article>
+            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+            <h4>A morbi arcu curabitur etiam fringilla augue.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div>
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </article>
+          <div>
+            <div>
+              <img src="./images/arrow-left.svg" alt="Arrow Left">
+              <span>Old Posts</span>
+            </div>
+            <div>
+              <span>New Posts</span>
+              <img src="./images/arrow-right.svg" alt="Arrow Right">
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     <footer>
-      
+      <div>
+        <div>
+          <h2>Interested to work with our team?</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        </div>
+        <div>
+          <button>Let's Talk</button>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h3>Afrianska</h3>
+          <p>A. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p>T. +62-812-7313-4321</p>
+          <p>E. hello.afrian@gmail.com</p>
+        </div>
+        <div>
+          <h3>About Us</h3>
+          <ul>
+            <li>About</li>
+            <li>What We Do</li>
+            <li>Project</li>
+            <li>How It Works With Us</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Follow Us</h3>
+          <ul>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Youtube</a></li>
+          </ul>
+        </div>
+        <p>2019 &copy; Afrianska. All rights reserved.</p>
+      </div>
     </footer>
   </div>
 </body>
