--- a/index.html
+++ b/index.html
@@ -5,54 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blog Afrianska</title>
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <div class="wrapper">
     <header>
-      <div>
-        <p>A</p>
-        <ul>
+      <div class="flex">
+        <img src="./images/Logo.png" alt="Logo">
+        <ul class="flex">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Espect&aacute;tulo</a></li>
+          <li><a href="#">Espect&aacute;culo</a></li>
           <li><a href="#">Deportes</a></li>
         </ul>
       </div>
       <div>
         <h1>Blog Afrianska</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua.</p>
       </div>
     </header>
     <main>
-      <div>
-        <div>
-          <img src="./images/icon-search.svg" alt="Search Icon">
-          <input type="text" placeholder="Search Article">
-        </div>
-        <section>
-          <h3>POPULAR</h3>
-          <article>
-            <div>
-              <h2>Feugiat sodales at nullam tellus.</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi posuere nibh tempor fringilla porta pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="search">
+        <img src="./images/icon-search.svg" alt="Search Icon">
+        <input type="text" placeholder="Search Article">
+      </div>
+      <section class="section-1">
+        <h3>POPULAR</h3>
+        <article class="flex main-article">
+          <div>
+            <h2>Feugiat sodales at nullam tellus.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi posuere nibh tempor fringilla porta pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="flex article-info">
               <div>
-                <div>
-                  <p><strong>Samantha Leuthex</strong></p>
-                  <p>May 5, 3 min read</p>
-                </div>
-                <div>
-                  <img src="./images/icon-save.svg" alt="Save Icon">
-                  <img src="./images/icon-share.svg" alt="Share Icon">
-                </div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div>
+                <img src="./images/icon-save.svg" alt="Save Icon">
+                <img src="./images/icon-share.svg" alt="Share Icon">
               </div>
             </div>
-            <figure><img src="https://picsum.photos/540/380" alt="Main Post Image"></figure>
-          </article>
-          <div>
-            <article>
-              <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+          </div>
+          <figure>
+            <img src="https://picsum.photos/400/300" alt="Main Post Image">
+          </figure>
+        </article>
+        <div class="grid">
+          <article>
+            <figure>
+              <img src="https://picsum.photos/250" alt="Post Image">
+            </figure>
+            <div>
               <h3>Porta proin tellus sed pulvinar odio eu pulvinar.</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <div>
+              <div class="flex article-info">
                 <div>
                   <p>Samantha Leuthex</p>
                   <p>May 5, 3 min read</p>
@@ -62,117 +67,141 @@
                   <img src="./images/icon-share.svg" alt="Share Icon">
                 </div>
               </div>
-            </article>
-            <article>
-              <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
-              <h3>Non quam tortor, proin eu egestas scelerisque.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <div>
-                <div>
-                  <p>Samatha Leuthex</p>
-                  <p>May 5, 3 min read</p>
-                </div>
-                <div>
-                  <img src="./images/icon-save.svg" alt="Save Icon">
-                  <img src="./images/icon-share.svg" alt="Share Icon">
-                </div>
-              </div>
-            </article>
-            <article>
-              <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
-              <h3>Amet amet sed pharetra risus sit eget interdum.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <div>
-                <div>
-                  <p>Samantha Leuthex</p>
-                  <p>May 5, 3 min read</p>
-                </div>
-                <div>
-                  <img src="./images/icon-save.svg" alt="Save Icon">
-                  <img src="./images/icon-share.svg" alt="Share Icon">
-                </div>
-              </div>
-            </article>
-          </div>
-          <p>SEE ALL POPULAR ARTICLE</p>
-        </section>
-        <section>
-          <h3>ALL ARTICLES</h3>
+            </div>
+          </article>
           <article>
-            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
+            <figure>
+              <img src="https://picsum.photos/250" alt="Post Image">
+            </figure>
+            <h3>Non quam tortor, proin eu egestas scelerisque.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="flex article-info">
+              <div>
+                <p>Samatha Leuthex</p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div>
+                <img src="./images/icon-save.svg" alt="Save Icon">
+                <img src="./images/icon-share.svg" alt="Share Icon">
+              </div>
+            </div>
+          </article>
+          <article>
+            <figure>
+              <img src="https://picsum.photos/250" alt="Post Image">
+            </figure>
+            <h3>Amet amet sed pharetra risus sit eget interdum.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="flex article-info">
+              <div>
+                <p>Samantha Leuthex</p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div>
+                <img src="./images/icon-save.svg" alt="Save Icon">
+                <img src="./images/icon-share.svg" alt="Share Icon">
+              </div>
+            </div>
+          </article>
+        </div>
+        <p>SEE ALL POPULAR ARTICLES</p>
+      </section>
+      <section class="section-2">
+        <h3>ALL ARTICLES</h3>
+        <article class="flex">
+          <figure>
+            <img src="https://picsum.photos/300/200" alt="Post Image">
+          </figure>
+          <div>
             <h4>Massa eu in laoreet enim augue vulputate nunc.</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
-            <div>
+            <div class="flex article-info">
               <div>
                 <p><strong>Samantha Leuthex</strong></p>
                 <p>May 5, 3 min read</p>
               </div>
               <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
-            </div>
-          </article>
-          <article>
-            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
-            <h4>Feugiat a euismod arcu feugiat posuere morbi.</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
-            <div>
-              <div>
-                <p><strong>Samantha Leuthex</strong></p>
-                <p>May 5, 3 min read</p>
-              </div>
-              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
-            </div>
-          </article>
-          <article>
-            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
-            <h4>Sociis purus pellentesque faucibus vitae et felis.</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
-            <div>
-              <div>
-                <p><strong>Samantha Leuthex</strong></p>
-                <p>May 5, 3 min read</p>
-              </div>
-              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
-            </div>
-          </article>
-          <article>
-            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
-            <h4>Cursus feugiat mi pellentesque mauris sed eu.</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
-            <div>
-              <div>
-                <p><strong>Samantha Leuthex</strong></p>
-                <p>May 5, 3 min read</p>
-              </div>
-              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
-            </div>
-          </article>
-          <article>
-            <figure><img src="https://picsum.photos/300/200" alt="Post Image"></figure>
-            <h4>A morbi arcu curabitur etiam fringilla augue.</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
-            <div>
-              <div>
-                <p><strong>Samantha Leuthex</strong></p>
-                <p>May 5, 3 min read</p>
-              </div>
-              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
-            </div>
-          </article>
-          <div>
-            <div>
-              <img src="./images/arrow-left.svg" alt="Arrow Left">
-              <span>Old Posts</span>
-            </div>
-            <div>
-              <span>New Posts</span>
-              <img src="./images/arrow-right.svg" alt="Arrow Right">
             </div>
           </div>
-        </section>
-      </div>
+        </article>
+        <article class="flex">
+          <figure>
+            <img src="https://picsum.photos/300/200" alt="Post Image">
+          </figure>
+          <div>
+            <h4>Feugiat a euismod arcu feugiat posuere morbi.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div class="flex article-info">
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </div>
+        </article>
+        <article class="flex">
+          <figure>
+            <img src="https://picsum.photos/300/200" alt="Post Image">
+          </figure>
+          <div>
+            <h4>Sociis purus pellentesque faucibus vitae et felis.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div class="flex article-info">
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </div>
+        </article>
+        <article class="flex">
+          <figure>
+            <img src="https://picsum.photos/300/200" alt="Post Image">
+          </figure>
+          <div>
+            <h4>Cursus feugiat mi pellentesque mauris sed eu.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div class="flex article-info">
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </div>
+        </article>
+        <article class="flex">
+          <figure>
+            <img src="https://picsum.photos/300/200" alt="Post Image">
+          </figure>
+          <div>
+            <h4>A morbi arcu curabitur etiam fringilla augue.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quisque magna in nisl nibh bibendum ipsum, elit duis. Donec.</p>
+            <div class="flex article-info">
+              <div>
+                <p><strong>Samantha Leuthex</strong></p>
+                <p>May 5, 3 min read</p>
+              </div>
+              <div><img src="./images/icon-save.svg" alt="Save Icon"><img src="./images/icon-share.svg" alt="Share Icon"></div>
+            </div>
+          </div>
+        </article>
+        <div class="flex">
+          <div>
+            <img src="./images/arrow-left.svg" alt="Arrow Left">
+            <span>Old Posts</span>
+          </div>
+          <div>
+            <span>New Posts</span>
+            <img src="./images/arrow-right.svg" alt="Arrow Right">
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-      <div>
+      <div class="flex">
         <div>
           <h2>Interested to work with our team?</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -181,10 +210,10 @@
           <button>Let's Talk</button>
         </div>
       </div>
-      <div>
+      <div class="grid">
         <div>
           <h3>Afrianska</h3>
-          <p>A. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p>A. Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.</p>
           <p>T. +62-812-7313-4321</p>
           <p>E. hello.afrian@gmail.com</p>
         </div>
