--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="text" placeholder="Search Article">
       </div>
       <section class="section-1">
-        <h3>POPULAR</h3>
+        <h3 class="indicative-text">POPULAR</h3>
         <article class="flex main-article">
           <div>
             <h2>Feugiat sodales at nullam tellus.</h2>
@@ -104,10 +104,10 @@
             </div>
           </article>
         </div>
-        <p>SEE ALL POPULAR ARTICLES</p>
+        <p class="indicative-text">SEE ALL POPULAR ARTICLES</p>
       </section>
       <section class="section-2">
-        <h3>ALL ARTICLES</h3>
+        <h3 class="indicative-text">ALL ARTICLES</h3>
         <article class="flex">
           <figure>
             <img src="https://picsum.photos/300/200" alt="Post Image">
@@ -191,10 +191,10 @@
         <div class="flex">
           <div>
             <img src="./images/arrow-left.svg" alt="Arrow Left">
-            <span>Old Posts</span>
+            <span class="indicative-text">Old Posts</span>
           </div>
           <div>
-            <span>New Posts</span>
+            <span class="indicative-text">New Posts </span>
             <img src="./images/arrow-right.svg" alt="Arrow Right">
           </div>
         </div>
@@ -212,7 +212,7 @@
       </div>
       <div class="grid">
         <div>
-          <h3>Afrianska</h3>
+          <h3><img src="./images/Logo.png" alt="Logo">Afrianska</h3>
           <p>A. Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.</p>
           <p>T. +62-812-7313-4321</p>
           <p>E. hello.afrian@gmail.com</p>
