--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             </div>
           </div>
           <figure>
-            <img src="https://picsum.photos/400/300" alt="Main Post Image">
+            <img src="./images/Main Article.jpg" alt="Main Post Image">
           </figure>
         </article>
         <div class="grid">
           <article>
             <figure>
-              <img src="https://picsum.photos/250" alt="Post Image">
+              <img src="./images/Section 1 Articles.jpg" alt="Post Image">
             </figure>
             <div>
               <h3>Porta proin tellus sed pulvinar odio eu pulvinar.</h3>
@@ -71,7 +71,7 @@
           </article>
           <article>
             <figure>
-              <img src="https://picsum.photos/250" alt="Post Image">
+              <img src="./images/Section 1 Articles.jpg" alt="Post Image">
             </figure>
             <h3>Non quam tortor, proin eu egestas scelerisque.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -88,7 +88,7 @@
           </article>
           <article>
             <figure>
-              <img src="https://picsum.photos/250" alt="Post Image">
+              <img src="./images/Section 1 Articles.jpg" alt="Post Image">
             </figure>
             <h3>Amet amet sed pharetra risus sit eget interdum.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -110,7 +110,7 @@
         <h3 class="indicative-text">ALL ARTICLES</h3>
         <article class="flex">
           <figure>
-            <img src="https://picsum.photos/300/200" alt="Post Image">
+            <img src="./images/Section 2 Articles.jpg" alt="Post Image">
           </figure>
           <div>
             <h4>Massa eu in laoreet enim augue vulputate nunc.</h4>
@@ -126,7 +126,7 @@
         </article>
         <article class="flex">
           <figure>
-            <img src="https://picsum.photos/300/200" alt="Post Image">
+            <img src="./images/Section 2 Articles.jpg" alt="Post Image">
           </figure>
           <div>
             <h4>Feugiat a euismod arcu feugiat posuere morbi.</h4>
@@ -142,7 +142,7 @@
         </article>
         <article class="flex">
           <figure>
-            <img src="https://picsum.photos/300/200" alt="Post Image">
+            <img src="./images/Section 2 Articles.jpg" alt="Post Image">
           </figure>
           <div>
             <h4>Sociis purus pellentesque faucibus vitae et felis.</h4>
@@ -158,7 +158,7 @@
         </article>
         <article class="flex">
           <figure>
-            <img src="https://picsum.photos/300/200" alt="Post Image">
+            <img src="./images/Section 2 Articles.jpg" alt="Post Image">
           </figure>
           <div>
             <h4>Cursus feugiat mi pellentesque mauris sed eu.</h4>
@@ -174,7 +174,7 @@
         </article>
         <article class="flex">
           <figure>
-            <img src="https://picsum.photos/300/200" alt="Post Image">
+            <img src="./images/Section 2 Articles.jpg" alt="Post Image">
           </figure>
           <div>
             <h4>A morbi arcu curabitur etiam fringilla augue.</h4>
