--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blog Afrianska</title>
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
   <div class="wrapper">
@@ -213,9 +213,11 @@
       <div class="grid">
         <div>
           <h3><img src="./images/Logo.png" alt="Logo">Afrianska</h3>
-          <p>A. Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.</p>
-          <p>T. +62-812-7313-4321</p>
-          <p>E. hello.afrian@gmail.com</p>
+          <ul>
+            <li>A. Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit.</li>
+            <li>T. +62-812-7313-4321</li>
+            <li>E. hello.afrian@gmail.com</li>
+          </ul>
         </div>
         <div>
           <h3>About Us</h3>
